common functions moved to js files

--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.16",
     "core-js": "^2.6.5",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.0",
     "vue": "^2.6.6",
     "vue-route": "^1.5.1",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vuejs-datepicker": "^1.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
