--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^2.6.5",
     "jquery": "^3.4.0",
     "vue": "^2.6.6",
+    "vue-js-toggle-button": "^1.3.2",
     "vue-route": "^1.5.1",
     "vue-router": "^3.0.3",
     "vuejs-datepicker": "^1.5.4"
